adjust log debug

--- a/base_temple.html
+++ b/base_temple.html
@@ -6,8 +6,10 @@
 <script type='text/javascript'>
     function crash() {
         var elementTree1=[];
+        var elementTree2=[];
         
         
+        //  WARNING !!! 日志中的输出还缺少产生崩溃的最后一行代码,记得要回去跟踪JavaScript 流补上..
     }
 </script>	
 </head>
